<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidApp</string>
    <string name="tx_hello">Hallo</string>
    
    <!-- Schaltflaechen -->
    <string name="sf_action">Action</string>
    <string name="sf_tabhost">TabHost</string>
    <string name="sf_list">Liste</string>
    <string name="sf_dialog">Dialog</string>
    <string name="sf_progress">Progress</string>
    <string name="sf_toast">Toast</string>
    <string name="sf_service">Service</string>
    <string name="sf_canvas">Canvas</string>
    <string name="sf_opengl">OpenGL</string>
    <string name="sf_db">DB SQLite</string>
    <string name="sf_sensor">Sensors</string>
    
    <!-- Options-Menue -->
    <string name="opt_preferences">Einstellungen</string>
    <string name="opt_help">Hilfe</string>
    <string name="opt_close">Beenden</string>
    <string name="opt_create">Hinzufügen...</string>
    <string name="opt_delete">Löschen</string>
    
    <!-- Dialog -->
    <string name="dia1_title">Preferences lesen</string>
    <string name="dia1_message">Hallo </string>
    
    <!-- ProgressDialog -->
    <string name="dia_title">Bitte warten &#8230;</string>
    <string name="dia_message">Daten werden geladen</string>
    
    <!-- Formular -->
    <string name="form_text_default">Bitte Namen eingeben.</string>
    
    <!-- ListView -->
    <string name="list_empty">Keine Daten!</string>
    
    <!-- TabHost -->
    
    <!-- Tab 1 -->
    <string name="tab1_label">Tab 1</string>
    <string name="tab2_label">Tab 2</string>
    
    <!-- Preferences -->
    <string name="prefs_cat1">Einstellungen</string>
    <string name="prefs_username">Benutzername</string>
    
    <!-- Data Edit -->
    <string name="field_title">Titel</string>
    <string name="field_text">Text</string>
    <string name="btn_confirm">OK</string>
    
    <!-- Sensors -->
    <string name="sensor_title">Sensors</string>
    
    
</resources>