<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_hello" />

        <Button
            android:id="@+id/sf_action"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAction"
            android:text="@string/sf_action" />
        
        <Button
            android:id="@+id/sf_tabhost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAction"
            android:text="@string/sf_tabhost" />
        
        <ImageButton 
            android:id="@+id/sf_intent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAction"
            android:src="@drawable/ic_android_logo" />
        
        <Button
            android:id="@+id/sf_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAction"
            android:text="@string/sf_list" />
        
        <Button
            android:id="@+id/sf_dialog"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAction"
            android:text="@string/sf_dialog" />
        
         <Button
            android:id="@+id/sf_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAction"
            android:text="@string/sf_progress" />
        
        <Button
            android:id="@+id/sf_toast"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAction"
            android:text="@string/sf_toast" />
        
        <Button
            android:id="@+id/sf_canvas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAction"
            android:text="@string/sf_canvas" />
        
        <Button
            android:id="@+id/sf_opengl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAction"
            android:text="@string/sf_opengl" />
        
        <Button
            android:id="@+id/sf_db"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAction"
            android:text="@string/sf_db" />
        
    </LinearLayout>
</ScrollView>