<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<EditText 
		    android:id="@+id/title" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
		
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/field_title" />
		
	</LinearLayout>

	<TextView 
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/field_text" />
	
	<EditText 
	    android:id="@+id/text" 
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" 
		android:gravity="top" 
		android:inputType="textMultiLine"/>
	
	<Button
	    android:id="@+id/confirm" 
	    android:text="@string/btn_confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

</LinearLayout>